--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@
     height: 100svh;
     overflow: hidden;
   }
+
+  .body {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .navigation {
     z-index: 100;
     left: 0;
@@ -41,7 +47,7 @@
     height: 50px;
     z-index: 1;
   }
-  .navigation ul li a {
+  .navigation ul li .a {
     position: relative;
     display: flex;
     justify-content: center;
@@ -51,20 +57,20 @@
     color: #333;
     font-weight: 500;
   }
-  .navigation ul li a .icon {
+  .navigation ul li .a .icon {
     position: relative;
     display: block;
     line-height: 55px;
     text-align: center;
     transition: 0.5s;
   }
-  .navigation ul li.active a .icon {
+  .navigation ul li.active .a .icon {
     color: #fff;
   }
-  .navigation ul li a .icon i {
+  .navigation ul li .a .icon i {
     font-size: 20px;
   }
-  .navigation ul li a .title {
+  .navigation ul li .a .title {
     position: absolute;
     bottom: 80px;
     left: 50%;
@@ -78,12 +84,12 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     visibility: hidden;
   }
-  .navigation ul li:hover a .title {
+  .navigation ul li:hover .a .title {
     opacity: 1;
     visibility: visible;
     transform: translate(-50%, 50%);
   }
-  .navigation ul li a .title::before {
+  .navigation ul li .a .title::before {
     content: "";
     position: absolute;
     width: 12px;
@@ -448,6 +454,48 @@
       }
 
     /* TOUR */
+    #popup-srg, #popup-sr, #popup-s, #popup-gs, #popup-g {
+      opacity: 0;
+      position: absolute;
+  }
+  
+  #popup-srg:target, #popup-sr:target, #popup-s:target, #popup-gs:target, #popup-g:target {
+      z-index: 20;
+      opacity: 1;
+      width: 95%;
+      height: 90svh;
+      top: 0.5rem;
+      left: 0.5rem;
+      right: 0.5rem;
+      position: absolute;
+      border-radius: 1rem;
+      backdrop-filter: blur(25px) saturate(180%);
+      -webkit-backdrop-filter: blur(25px) saturate(180%);
+      background-color: #ffffff49;
+      border: 1px solid rgba(209, 213, 219, 0.164);
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+      animation: popup 0.2s;
+  }
+
+  @keyframes popup {
+    0%{
+      transform: scale(0.1);
+    }
+    100%{
+      transform: scale(1);
+    }
+  }
+  
+  #popup-close {
+      top: 0.5rem;
+      right: 0.5rem;
+      text-align: center;
+      position: absolute;
+      width: 1.5rem;
+      height: 1.5rem;
+      border-radius: 50%;
+      background-color: brown;
+  }
     .tour-name {
       color: white;
       left: 0.5rem;
@@ -497,7 +545,6 @@
         overflow: hidden;
         width: 160%;
         box-shadow: 5px 5px 5px;
-        display: flex;
         justify-content: center;
         align-items: center;
         padding-top: 66.7%;
