--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@
 /* div slide */
 
 .main-container {
-    scroll-behavior: smooth;
+    scroll-behavior: auto;
     overflow: hidden;
     display: flex;
 
@@ -170,12 +170,12 @@
 }
 
 .bus-left {
-    margin-top: 0.2rem;
+    margin-top: 2rem;
     width: 10rem;
   }
   
   .bus-right {
-    margin-top: .2rem;
+    margin-top: 2rem;
     width: 100%;
   }
 
@@ -289,10 +289,20 @@
   /* home */
   #slide-event-today {
     position: relative;
-    bottom: -40px;
   }
   #slide-event-tomorrow {
+    margin-top: 1.5rem;
     position: relative;
+  }
+
+  .date-tmr, .date-today {
+    padding-left: 0.5rem;
+    color: rgb(255, 255, 255);
+    backdrop-filter: blur(25px) saturate(180%);
+    -webkit-backdrop-filter: blur(25px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.13);
+    border: 1px solid rgba(209, 213, 219, 0.164);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
   }
   
   
@@ -454,63 +464,99 @@
       }
 
     /* TOUR */
-    #popup-srg, #popup-sr, #popup-s, #popup-gs, #popup-g {
+    #popup-srg, #popup-sr, #popup-s, #popup-gs, #popup-g, #popup-f, #popup-bs, #popup-bm, #popup-kk, #popup-ph, #popup-cr, #popup-ck {
       opacity: 0;
       position: absolute;
   }
   
-  #popup-srg:target, #popup-sr:target, #popup-s:target, #popup-gs:target, #popup-g:target {
+  #popup-srg:target, #popup-sr:target, #popup-s:target, #popup-gs:target, #popup-g:target, #popup-f:target, #popup-bs:target, #popup-bm:target, #popup-kk:target, #popup-ph:target, #popup-cr:target, #popup-ck:target {
       z-index: 20;
       opacity: 1;
-      width: 95%;
-      height: 90svh;
       top: 0.5rem;
+      bottom: 4rem;
       left: 0.5rem;
       right: 0.5rem;
+      height: auto;
       position: absolute;
       border-radius: 1rem;
       backdrop-filter: blur(25px) saturate(180%);
       -webkit-backdrop-filter: blur(25px) saturate(180%);
       background-color: #ffffff49;
       border: 1px solid rgba(209, 213, 219, 0.164);
-      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+      box-shadow: -50px 50px 50px 120px;
       animation: popup 0.2s;
   }
 
   @keyframes popup {
     0%{
-      transform: scale(0.1);
+      transform: scale(0.8);
     }
     100%{
       transform: scale(1);
     }
   }
-  
+
   #popup-close {
-      top: 0.5rem;
-      right: 0.5rem;
-      text-align: center;
+      top: 0;
+      right: 0.4rem;
+      text-align: end;
       position: absolute;
-      width: 1.5rem;
-      height: 1.5rem;
-      border-radius: 50%;
-      background-color: brown;
+      width: 100%;
+      height: 100%;
+      font-size: 1rem;
+      color: #2e2525;
   }
     .tour-name {
       color: white;
-      left: 0.5rem;
+      left: 1rem;
       position: absolute;
     }
 
     .bg-tour1, .bg-tour2, .bg-tour3 {
       margin-top: 1rem;
       position: relative;
-      height: 170px;
       backdrop-filter: blur(25px) saturate(180%);
       -webkit-backdrop-filter: blur(25px) saturate(180%);
       background-color: rgba(255, 255, 255, 0.192);
       border: 1px solid rgba(209, 213, 219, 0.048);
       box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+    }
+    .swiper-slide {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-direction: column;
+      flex: none;
+      &.swiper-slide-active {
+        .gallery-img__wrapper2 {
+          opacity: 1;
+          transform: scale(0.9);
+        }
+        .gallery-info__wrapper {
+          opacity: 1;
+          transform: translateY(0%);
+        }
+      }
+    }
+    .gallery-img__wrapper2 {
+      position: relative;
+      overflow: hidden;
+      width: 114%;
+      box-shadow: 5px 5px 5px;
+      justify-content: center;
+      align-items: center;
+      padding-top: 65%;
+      border-radius: .75rem;
+      opacity: 0.7;
+      transform: scale(0.7);
+      transition: transform .6s cubic-bezier(.77, 0, .175, 1), opacity .8s cubic-bezier(.77, 0, .175, 1);
+      .gallery-img {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        max-width: none;
+        object-fit: cover;
+      }
     }
 
     .swiperParallax {
@@ -544,12 +590,13 @@
         position: relative;
         overflow: hidden;
         width: 160%;
+        margin-bottom: -1rem;
         box-shadow: 5px 5px 5px;
         justify-content: center;
         align-items: center;
-        padding-top: 66.7%;
+        padding-top: 65%;
         border-radius: .75rem;
-        opacity: 0.9;
+        opacity: 0.7;
         transform: scale(0.5);
         transition: transform .6s cubic-bezier(.77, 0, .175, 1), opacity .8s cubic-bezier(.77, 0, .175, 1);
         .gallery-img {
@@ -570,9 +617,9 @@
         align-items: center;
         opacity: 0;
         transform: translateY(50%);
-        transition: transform .6s cubic-bezier(.77, 0, .175, 1), opacity .8s cubic-bezier(.77, 0, .175, 1);
+        transition: transform 1s cubic-bezier(.77, 0, .175, 1), opacity .8s cubic-bezier(.77, 0, .175, 1);
         .heading-medium {
-          margin-top: -5rem;
+          margin-top: -3rem;
           text-transform: uppercase;
           font-size: 0.7rem;
           line-height: 1;
