--- a/styles.css
+++ b/styles.css
@@ -169,13 +169,28 @@
     flex:none;
 }
 
+.bus-header-name {
+  padding-top: 0.5rem;
+  padding-left: 0.5rem;
+  width: 100%;
+  height: 3rem;
+  position: absolute;
+  font-size: 20px;
+  color: white;
+  backdrop-filter: blur(25px) saturate(180%);
+  -webkit-backdrop-filter: blur(15px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0.055);
+  border: 1px solid rgba(209, 213, 219, 0.164);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+}
+
 .bus-left {
-    margin-top: 2rem;
+    margin-top: 3rem;
     width: 10rem;
   }
   
   .bus-right {
-    margin-top: 2rem;
+    margin-top: 3rem;
     width: 100%;
   }
 
@@ -386,6 +401,30 @@
       box-shadow: black 2px 2px 2px ;
     }
     /* Activity  */
+
+    #popup-yoga, #popup-cycling, #popup-social, #popup-khmer, #popup-pool, #popup-bracelet, #popup-streetfood, #popup-movie, #popup-home-floating {
+      opacity: 0;
+      position: absolute;
+    }
+
+    #popup-yoga:target, #popup-cycling:target, #popup-social:target, #popup-khmer:target, #popup-pool:target, #popup-bracelet:target, #popup-streetfood:target, #popup-movie:target, #popup-home-floating:target {
+      z-index: 20;
+      opacity: 1;
+      top: 0.5rem;
+      bottom: 4rem;
+      left: 0.5rem;
+      right: 0.5rem;
+      height: auto;
+      position: absolute;
+      border-radius: 1rem;
+      backdrop-filter: blur(25px) saturate(180%);
+      -webkit-backdrop-filter: blur(25px) saturate(180%);
+      background-color: #ffffff49;
+      border: 1px solid rgba(209, 213, 219, 0.164);
+      box-shadow: -50px 50px 50px 120px;
+      animation: popup 0.2s;
+    }
+
     #cycling, #streetfood, #yoga, #bracelet, #khmerclass, #socialnight, #movienight, #poolparty {
         display: none;
       }
