--- a/styles.css
+++ b/styles.css
@@ -403,26 +403,26 @@
     /* Activity  */
 
     #popup-yoga, #popup-cycling, #popup-social, #popup-khmer, #popup-pool, #popup-bracelet, #popup-streetfood, #popup-movie, #popup-home-floating {
-      opacity: 0;
+      display: none;
       position: absolute;
     }
 
     #popup-yoga:target, #popup-cycling:target, #popup-social:target, #popup-khmer:target, #popup-pool:target, #popup-bracelet:target, #popup-streetfood:target, #popup-movie:target, #popup-home-floating:target {
       z-index: 20;
       opacity: 1;
-      top: 0.5rem;
-      bottom: 4rem;
-      left: 0.5rem;
-      right: 0.5rem;
-      height: auto;
+      width: 100%;
+      height: 100%;
+      top: 50%;
+      left: 50%;
+      margin-right: -45%;
+      transform: translate(-50%, -50%);
       position: absolute;
-      border-radius: 1rem;
-      backdrop-filter: blur(25px) saturate(180%);
-      -webkit-backdrop-filter: blur(25px) saturate(180%);
-      background-color: #ffffff49;
-      border: 1px solid rgba(209, 213, 219, 0.164);
-      box-shadow: -50px 50px 50px 120px;
-      animation: popup 0.2s;
+      backdrop-filter: blur(50px) saturate(180%);
+      -webkit-backdrop-filter: blur(50px) saturate(180%);
+      background-color: #4b434349;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     #cycling, #streetfood, #yoga, #bracelet, #khmerclass, #socialnight, #movienight, #poolparty {
@@ -486,12 +486,12 @@
       
       .time-dep {
         position: absolute;
-        background-color: #555352;
+        background-color: #ffffff;
         bottom: -10px;
         right: 0;
         font-size: 10px;
         font-weight: bold;
-        color: rgb(255, 255, 255);
+        color: rgb(58, 54, 54);
         padding: 0.2rem;
         border-radius: 0.3rem;
       }
@@ -504,33 +504,43 @@
 
     /* TOUR */
     #popup-srg, #popup-sr, #popup-s, #popup-gs, #popup-g, #popup-f, #popup-bs, #popup-bm, #popup-kk, #popup-ph, #popup-cr, #popup-ck {
-      opacity: 0;
+      display: none;
       position: absolute;
   }
   
   #popup-srg:target, #popup-sr:target, #popup-s:target, #popup-gs:target, #popup-g:target, #popup-f:target, #popup-bs:target, #popup-bm:target, #popup-kk:target, #popup-ph:target, #popup-cr:target, #popup-ck:target {
       z-index: 20;
       opacity: 1;
-      top: 0.5rem;
-      bottom: 4rem;
-      left: 0.5rem;
-      right: 0.5rem;
-      height: auto;
+      width: 100%;
+      height: 100%;
+      top: 50%;
+      left: 50%;
+      margin-right: -45%;
+      transform: translate(-50%, -50%);
       position: absolute;
-      border-radius: 1rem;
-      backdrop-filter: blur(25px) saturate(180%);
-      -webkit-backdrop-filter: blur(25px) saturate(180%);
-      background-color: #ffffff49;
-      border: 1px solid rgba(209, 213, 219, 0.164);
-      box-shadow: -50px 50px 50px 120px;
-      animation: popup 0.2s;
+      backdrop-filter: blur(50px) saturate(180%);
+      -webkit-backdrop-filter: blur(50px) saturate(180%);
+      background-color: #4b434349;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+
+  .popup-text {
+    padding: 1rem;
+    width: 96%;
+    border-radius: 1rem;
+    animation: popup 0.5s;
+    backdrop-filter: blur(50px) saturate(180%);
+    -webkit-backdrop-filter: blur(50px) saturate(180%);
+    background-color: #ffffff49;
   }
 
   @keyframes popup {
-    0%{
-      transform: scale(0.8);
+    0% {
+      transform: scale(0.5);
     }
-    100%{
+    100% {
       transform: scale(1);
     }
   }
@@ -543,7 +553,7 @@
       width: 100%;
       height: 100%;
       font-size: 1rem;
-      color: #2e2525;
+      color: #2e252500;
   }
     .tour-name {
       color: white;
