--- a/styles.css
+++ b/styles.css
@@ -549,6 +549,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      z-index: 1;
     }
 
     #cycling, #streetfood, #yoga, #bracelet, #khmerclass, #socialnight, #movienight, #poolparty {
