--- a/styles.css
+++ b/styles.css
@@ -565,6 +565,7 @@
       }
 
       .aty-pic {
+        box-shadow: 2px 2px 10px 0px black;
         margin: 0.5rem;
         position: relative;
         background-color: #000000;
